--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <label for="inputBookIsComplete">Selesai dibaca</label>
             <input id="inputBookIsComplete" type="checkbox" />
           </div>
-          <button id="bookSubmit" type="submit">
-            Masukkan Buku ke rak <span>Belum selesai dibaca</span>
+          <button id="submitBook" type="submit">Masukkan Buku ke rak <span id="submitStatus">Belum Selesai</span></button>
+          <button id="submitBookChange" type="submit">Masukkan Buku ke rak <span id="submitStatusChange">Belum Selesai</span></button>
           </button>
         </form>
       </section>
